# vanta-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
api-docs/: Vanta API.postman_collection.json  Vanta Environment.postman_environment.json  api-spec.json
src/vanta_cli/: changeset.py  client.py  config.py  main.py  output.py
src/vanta_cli/commands/: changeset.py  configure.py  controls.py  customer_trust.py  discovered_vendors.py  documents.py  frameworks.py  groups.py  integrations.py  monitored_computers.py  people.py  policies.py  risk_scenarios.py  tests.py  trust_centers.py  users.py  vendor_risk_attributes.py  vendors.py  vulnerabilities.py  vulnerability_remediations.py  vulnerable_assets.py
src/vanta_cli/tui/: app.py  service.py
src/vanta_cli/tui/screens/: changeset.py  detail.py  resource_list.py  tests.py
src/vanta_cli/tui/widgets/: breadcrumb.py  dashboard.py  sidebar.py
tests/: test_changeset.py  test_changeset_tui.py  test_client_retry.py  test_filters.py  test_profiles.py  test_search.py  test_service_concurrency.py  test_token_retry.py
